5.0.0 -> 5.0.1:
    - jbj: use RPM_OS_NTOQNX as manifest constant.
    - jbj: updated nl.po (Translation Project).
    - jbj: resurrect rpm.spec.in.
    - jbj: automake for xar internal.
    - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
    - jbj: QNX needs defines for fts.c.
    - jbj: include <pthread.h> everywhere.
    - jbj: rpmsq.h doesn't need pthread condvar/mutex any more.
    - jbj: QNX does not have insque/remque.
    - jbj: QNX does not have d_off.
    - jbj: proof-of-concept rpmbuild --lsb implementation.
    - mej: catch EOF returned as RPMRC_NOTFOUND correctly.
    - jbj: fix: permit %{lua:...} to recurse.
    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
    - jbj: fix several typos noticed by the translation project.
    - proyvind: Rename rpmcliImportPubkey() -> rpmtsImportPubkey() (from and for a hint of rpm.org API compatibility;)
    - proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
    - jbj: fix: plug memory leak with digest algos array.
    - jbj: fix: --relocate no longer needs to copy dirIndexes data.
    - proyvind: make perl install directory overriddable from configure as an argument (--with-perl=vendor/site)
    - proyvind: fix install location of man pages for perl bindings
    - proyvind: fix install location of pkgconfig & python bindings (lib64 fix)
    - proyvind: fix install location of rpm.pc (lib64 fix)
    - jbj: don't follow symlinks using chown/chgrp from --setugids pipe.
    - jbj: sync *.po with the translation project (sr@latin.po needs work).
    - rse: fix PGP clearsign signature verification by correctly skipping RFC2440 "dash-escapes"
    - rse: fix line-continuation handling in macro definition parsing
    - jbj: permit opt-in network access using %_rpmgio macro.
    - jbj: fix: deny rpmioSlurp network access (like all other Fopen call's).
    - rpm.org: Assorted int -> size_t corrections for string lengths.