@@ -1,4 +1,5 @@
 5.0.0 -> 5.0.1:
+    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
     - jbj: use RPM_OS_NTOQNX as manifest constant.
     - jbj: updated nl.po (Translation Project).
     - jbj: resurrect rpm.spec.in.
